# matrix_rw

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
examples/: read_example-1.csv  read_example-2.csv  read_example.cpp  read_example.csv  write_example.cpp
include/: matrix_rw.hpp
include/matrix_rw/: config.hpp  read.hpp  reader.hpp  types.hpp  write.hpp  writer.hpp
scripts/: update_test_data.sh
test/: matrix_rw-test.cpp  matrix_rw.cpp  rw_test.cpp  test-matrix_rw.cpp  test_config.hpp
test/matlab/: matrix_rw__test.m  rw_test.m  test__matrix_rw.m
test/ref_data/: matrix_rw-test-ref_mat.csv
